# SDL

./: .gitignore  CMakeLists.txt  Makefile  README.md  premake5.lua  workspace.code-workspace
src/: Core.cpp  Entity.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  RenderWindow.cpp  Scene.cpp  glad.c  main.cpp
src/ImGui/: ImGuiLayer.h  imgui.cpp  imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
src/Renderer/: Shader.cpp
src/include/: Components.h  Core.h  Entity.h  ImGuiLayer.h  Layer.h  LayerStack.h  RenderWindow.h  Scene.h  mainpch.h
src/include/Renderer/: Shader.h
src/include/Utility/: Log.h
src/include/glad/: glad.h
